// you can generate go models by the following command:
// protoc -I . user.proto --grpc-gateway_out . --go_out=plugins=grpc:.

syntax = "proto3";

option go_package = "/go_proto";

import "google/api/annotations.proto";

package user;

service UserService {
  rpc HelloUser(HelloRequest) returns (HelloResponse) {
    option(google.api.http) = {
      post: "/api/v1/hello"
      body: "*"
    };
  }
}

message HelloRequest {
  string userName = 1;
}

message HelloResponse {
  string message = 1;
}

